clang/test/BSC/Negative/NullabilityCheck/addr_deref_raw.cbs
// RUN: %clang_cc1 -verify %s
// Using `&const` or `&mut` to convert a raw ptr to borrow ptr is disallowed

_Safe void explicit_reborrow(int* ptr) {
    const int *borrow _Nullable cbp = &const *ptr; // expected-error {{'*' operator is forbidden in the safe zone}}
    int *borrow _Nullable mbp = &mut *ptr; // expected-error {{'*' operator is forbidden in the safe zone}}
}

void explicit_reborrow2(void) {
    int *ptr = nullptr;
    _Safe {
        const int *borrow _Nullable cbp = &const *ptr; // expected-error {{'*' operator is forbidden in the safe zone}}
        int *borrow _Nullable mbp = &mut *ptr; // expected-error {{'*' operator is forbidden in the safe zone}}
    }
}
